--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "os-browserify": "^0.3.0",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -23,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "superagent": "^8.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -30,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "openapi": "npx openapi-generator-cli generate -i https://api.fpt-ec.click/onlearn/v3/api-docs -o ./src/api/generated -g javascript --additional-properties=supportsES6=true,useSingleRequestParameter=true,sourceFolder=generate-api"
+    "openapi": "npx openapi-generator-cli generate -i http://192.168.1.12:8080/v3/api-docs -o ./src/api/generated -g javascript --additional-properties=supportsES6=true,useSingleRequestParameter=true,sourceFolder=generate-api"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.7.0"
