--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.30.1",
     "os-browserify": "^0.3.0",
     "querystring": "^0.2.1",
+    "rc-upload": "^4.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -33,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "openapi": "npx openapi-generator-cli generate -i http://192.168.1.12:8080/v3/api-docs -o ./src/api/generated -g javascript --additional-properties=supportsES6=true,useSingleRequestParameter=true,sourceFolder=generate-api"
+    "openapi": "npx openapi-generator-cli generate -i https://api.fptsp.xyz/auction/v3/api-docs -o ./src/api/generated -g javascript --additional-properties=supportsES6=true,useSingleRequestParameter=true,sourceFolder=generate-api"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.7.0"
