--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
+    "jotai": "^2.7.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "os-browserify": "^0.3.0",
@@ -23,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
