--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.47.0",
     "chakra-react-select": "^4.7.6",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
@@ -22,6 +23,7 @@
     "querystring": "^0.2.1",
     "rc-upload": "^4.5.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
